test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-unmanaged.good
init-field-dflt-nonnil-borrowed-from-oknil-unmanaged.chpl:8: error: cannot initialize 'lhs' of type 'borrowed MyClass' from a 'unmanaged MyClass?'
init-field-dflt-nonnil-borrowed-from-oknil-unmanaged.chpl:13: error: done
